<resources>

    <string name="app_name">Last Word</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="new_game">New Game</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_pick">Pick Opponenet</string>
    <string name="your_turn">Your Turn</string>
    <string name="their_turn">Their Turn</string>
    <string name="refresh">Refresh</string>
    <string name="you">You</string>
    <string name="login">Login</string>
    <string name="find_friends_on_facebook">Find Friends on Facebook</string>
    <string name="find_friends_by_username">Find Friends By Username</string>
    <string name="random_opponent">Random Opponent</string>
    <string name="title_activity_new">New Game</string>
    <string name="search">Search</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="_or_">" - OR - "</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="link_facebook">Link Facebook</string>
    <string name="link_twitter">Link Twitter</string>
    <string name="how_to_play">How To Play</string>
    <string name="play">Play</string>
    <string name="review">Review</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="pass">Pass</string>
    <string name="complete">Complete</string>
    <string name="resign">Resign</string>
    <string name="ticker_text">Using all of the letters from the last word earns you Double Points… You must use at least one letter from the last word…  The game is over when there are no more tiles, both players have passed consecutively, or a player resigns…  Each word can be at most 7-letters long.</string>
    <string name="settings">Settings</string>
    <string name="hide_ticker">Hide Ticker</string>
    <string name="chat_hint">Chat…</string>
    <string name="send">Send</string>
    <string name="left_handed">Left Handed</string>
    <string name="chat_push">Receive Notifications for Chat</string>
    <string name="game_push">Receive Notifications for Games</string>
    <string name="zero">0</string>
    <string name="shake_to_shuffle">Shake to Shuffle</string>

</resources>