<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
    
   <CheckBox
       android:id="@+id/hide_ticker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/hide_ticker"
       android:layout_alignParentTop="true"/>
   
   <CheckBox
       android:id="@+id/left_handed"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/left_handed"
       android:layout_below="@id/hide_ticker"/>
   
   <CheckBox
       android:id="@+id/chat_push"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/chat_push"
       android:layout_below="@id/left_handed"/>
   
   <CheckBox
       android:id="@+id/game_push"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/game_push"
       android:layout_below="@id/chat_push"/>
   
   <CheckBox
       android:id="@+id/shake_to_shuffle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/shake_to_shuffle"
       android:layout_below="@id/game_push"/>

    <com.example.words.view.Ticker 
        android:id="@id/ticker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>